.metadata/.plugins/org.eclipse.cdt.ui/MultiDimensional.build.log
05:04:28 **** Rebuild of configuration Debug for project MultiDimensional ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\MultiDimensional.o" "..\\src\\MultiDimensional.c" 
..\src\MultiDimensional.c:13:6: error: storage size of 'sum' isn't known
 void sum;
      ^~~

05:04:28 Build Failed. 1 errors, 0 warnings. (took 242ms)

